feat: set animations

--- a/index.html
+++ b/index.html
@@ -4,7 +4,10 @@
     <meta charset="UTF-8">
     <meta content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Microverse Adebsa Portfolio</title>
+    <title>Adebsa - Software Engineer</title>
+    <link rel="icon" type="image/x-icon" href="assets/images/adebsa-mini.png">
+
+    <link rel="stylesheet" href="assets/css/animate.min.css"/>
     <link rel="stylesheet" href="assets/css/style.css">
     <link rel="stylesheet" href="assets/css/style-768.css">
     <link rel="stylesheet" href="assets/css/menu-mobile.css">
@@ -32,8 +35,8 @@
 
 <!-- header start -->
 <header>
-    <a id="logo" href="#">
-        Adebsa
+    <a id="logo" class="animate__animated animate__fadeInLeft" href="index.html">
+        <img src="assets/images/adebsa.png" alt="Adebsa">
     </a>
     <nav>
         <!-- Mobile version nav start -->
@@ -43,7 +46,7 @@
         <!-- Mobile version nav end -->
 
         <!-- Desktop version nav start -->
-        <ul class="nav-menu" hidden>
+        <ul class="nav-menu animate__animated animate__fadeInRight" hidden>
             <li><a href="#recent-works">Portfolio</a></li>
             <li><a href="#about-section">About</a></li>
             <li><a href="#contact-section">Contact</a></li>
@@ -64,7 +67,7 @@
     <section id="headline">
         <div id="presentation-block">
             <h1>Hey There. I'm Ben Salès</h1>
-            <h2>I am a Software Developer</h2>
+            <h2>I am a Software Engineer</h2>
             <p>
                 I can help you build a product , feature or website Look through some of my work and experience! If you
                 like what you see and have a project you need coded,
@@ -260,6 +263,7 @@
 <script type="module" src="assets/js/projects.js"></script>
 <script src="assets/js/validation.js"></script>
 <script src="assets/js/form-storage.js"></script>
+<script src="assets/js/animate.js" defer></script>
 <!-- scripts end -->
 </body>
 </html>
