fix about me text overflowing

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
             <h1>Hey There. I'm Ben Salès</h1>
             <h2>I am a Software Engineer</h2>
             <p>
-                I can help you build a product , feature or website Look through some of my work and experience! If you
+                I can help you build a product , feature or website. Look through some of my work and experience! If you
                 like what you see and have a project you need coded,
                 don’t hestiate to contact me.
             </p>
@@ -128,31 +128,27 @@
     <section id="about-section" class="nav-section">
         <div id="resume-block">
             <h1>About me</h1>
-            <div class="collapsed">
-                <p>
-                    Ben Salès is a full-stack software engineer specializing in using JavaScript, React JS, Python, PHP, and
-                    Ruby on Rails to build intelligent software solutions for businesses of all sizes.
-                    For the last 3 years, I’ve been working on exciting projects such as an ERP for small businesses,
-                    software to track COVID-related tweets, a Python library for numerical computation for fun, and many
-                    more.
-                    I also completed Microverse’s full-stack software engineering program, where I worked on projects with
-                    other developers from all over the world.
-                    As a coding lover, I’ve also participated in hackathons like the Google Hash code competition.
-                </p>
-                <p>
-                    In my free time, I enjoy a variety of hobbies and personal interests. I'm an avid chess player and love
-                    challenging my mind with strategic moves on the chessboard. I'm also a voracious reader and enjoy diving
-                    into documentaries on various topics, such as animals, nature, politics, and more, to expand my
-                    knowledge and gain new perspectives. Additionally, I have a passion for music and arts - I love singing
-                    and even dabbling in dancing. Exploring different forms of creative expression brings me joy and adds a
-                    well-rounded aspect to my life as a software engineer.
-                </p>
-                <p>
-                    My goal as a software engineer is to continue pushing the boundaries of what's possible with technology
-                    and creating innovative solutions that make a positive impact on people's lives. I'm always eager to
-                    learn new technologies and stay up-to-date with industry trends to further enhance my skills.
-                </p>
-            </div>
+            <p class="collapsed">
+                Ben Salès is a full-stack software engineer specializing in using JavaScript, React JS, Python, PHP, and
+                Ruby on Rails to build intelligent software solutions for businesses of all sizes.
+                For the last 3 years, I’ve been working on exciting projects such as an ERP for small businesses,
+                software to track COVID-related tweets, a Python library for numerical computation for fun, and many
+                more.
+                I also completed Microverse’s full-stack software engineering program, where I worked on projects with
+                other developers from all over the world.
+                As a coding lover, I’ve also participated in hackathons like the Google Hash code competition.
+                <br><br>
+                In my free time, I enjoy a variety of hobbies and personal interests. I'm an avid chess player and love
+                challenging my mind with strategic moves on the chessboard. I'm also a voracious reader and enjoy diving
+                into documentaries on various topics, such as animals, nature, politics, and more, to expand my
+                knowledge and gain new perspectives. Additionally, I have a passion for music and arts - I love singing
+                and even dabbling in dancing. Exploring different forms of creative expression brings me joy and adds a
+                well-rounded aspect to my life as a software engineer.
+                <br><br>
+                My goal as a software engineer is to continue pushing the boundaries of what's possible with technology
+                and creating innovative solutions that make a positive impact on people's lives. I'm always eager to
+                learn new technologies and stay up-to-date with industry trends to further enhance my skills.
+            </p>
             <span id="read-more">Read more...</span>
             <button id="resume-button" type="button">Get My Resume</button>
         </div>
