--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
 <!-- header start -->
 <header>
-    <a id="logo" class="animate__animated animate__fadeInLeft" href="index.html">
+    <a id="logo" class="animate__animated animate__fadeInLeft" href="/">
         <img src="assets/images/adebsa.png" alt="Adebsa">
     </a>
     <nav>
