feat: Add responsive breakpoint at 1008px

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="assets/css/animate.min.css"/>
     <link rel="stylesheet" href="assets/css/style.css">
     <link rel="stylesheet" href="assets/css/style-768.css">
+    <link rel="stylesheet" href="assets/css/style-1000.css">
     <link rel="stylesheet" href="assets/css/menu-mobile.css">
     <link rel="stylesheet" href="assets/css/project-popup.css">
     <link rel="stylesheet" href="assets/css/project-popup-768.css">
@@ -17,17 +18,17 @@
 
 <body>
 <!-- mobile menu start -->
-<div id="mobile-menu" hidden>
+<div id="mobile-menu" class="animate__animated" hidden>
     <div id="mobile-menu-content">
-        <a id="close-menu-icon" href="javascript:void()" class="menu-item">
+        <a id="close-menu-icon" href="javascript:void()" class="menu-item animate__animated">
             <img src="assets/images/close.svg" alt="close" class="icon"/>
         </a>
 
-        <a class="menu-item" href="#recent-works">Portfolio</a>
+        <a class="menu-item animate__animated" href="#recent-works">Portfolio</a>
         <hr/>
-        <a class="menu-item" href="#about-section">About</a>
+        <a class="menu-item animate__animated" href="#about-section">About</a>
         <hr/>
-        <a class="menu-item" href="#contact-section">Contact</a>
+        <a class="menu-item animate__animated" href="#contact-section">Contact</a>
         <hr/>
     </div>
 </div>
